# tflens_explorer

./: .clinerules  .gitignore  EXPERIMENT_LOG.md  NEXT_STEPS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/: commands.yaml  evals.yaml  evals.yml  internals.yaml  models.yaml  models.yml
snapshots/: cat_sat.yaml  cat_sat_gpt.yaml  cat_sat_gpt2.yaml  dog_sat.yaml  dog_sat_gpt.yaml  dog_sat_gpt2.yaml  rain_spain_chat2.yaml  rain_spain_gpt2.yaml  shepherd_chat2.yaml  shepherd_deepseek.yaml  shepherd_gpt2.yaml  test.yaml
snapshots/archive-legacy/: cat_sat_gpt2_all.yaml  cat_sat_gpt_all.yaml  cat_sat_mistral1_all.yaml  cat_sat_mistral2.yaml  dog_sat_gpt2_all.yaml  dog_sat_gpt_all.yaml  dog_sat_mistral1_all.yaml  shepherd_deepseek.yaml  shepherd_gpt2.yaml  shepherd_gpt3.yaml  shepherd_lc_gpt2.yaml
snapshots/capital_of_paris_llama_all/: snapshot.yaml
snapshots/cat_mistral/: snapshot.yaml
snapshots/cat_sat_chat2_all/: snapshot.yaml
snapshots/cat_sat_falcon_all/: snapshot.yaml
snapshots/cat_sat_gpt2/: snapshot.yaml
snapshots/cat_sat_gpt2_a/: snapshot.yaml
snapshots/cat_sat_gpt2_all/: snapshot.yaml
snapshots/cat_sat_llama_all/: snapshot.yaml
snapshots/cat_sat_llama_chat/: snapshot.yaml
snapshots/data/: captal_of_paris_llama_all_vs_longest_book_llama_all  captal_of_paris_llama_all_vs_radius_circle_llama_all  cat_mistral_vs_dog_mistral  test_data.txt  (+14 more)
tests/: test_cache_commands.py  test_core_commands.py  test_dispatcher.py  test_eval_service.py  test_prompt_commands.py  test_registry.py  test_token_commands.py
(+63 files in other folders)
